# cv-project

./: main.py  pyproject.toml  tool_state.py  writeup.md
audit-frontend/src/: routeTree.gen.ts  styles.css
audit-frontend/src/components/: Header.tsx
audit-frontend/src/data/: dummy.auditlogs.ts
audit-frontend/src/routes/: audit-logs.tsx  index.tsx
audit-frontend/src/routes/api/audit-logs/: events.ts  overview.ts
embeddding-based-detection/: .gitignore  README.md
embeddding-based-detection/preprocess/: 1-segment-tool-images.py
